2007-02-09  Andrew Cagney  <cagney@redhat.com>

	* TestFstack.java: Enable tests.
	* TestFcore.java (tearDown): Delete Signal.drain of Sig.CHLD,
	handled by Expect.close.
	
2007-02-09  Mark Wielaard  <mark@klomp.org>

	* fstep.java: Fix output to say fstep, no fstack.
	(updateTerminated): Show whether Task terminated by a signal or not
	and mention exit code or signal number.

2007-02-09  Andrew Cagney  <cagney@redhat.com>

	* TestFcore.java: Enable all tests.
	(tearDown): Add call to Signal.drain of Sig.CHLD.

2007-02-08  Tim Moore  <timoore@redhat.com>

	* fhpd.java (main): Add command line option to enable logging.

2007-02-07  Andrew Cagney  <cagney@redhat.com>

	* TestFcore.java: Note broken with bug 4004.
	* TestFstack.java: Ditto.

	* TestFhd.java: New.  Translation of old dejagnu test from
	frysk-core/testsuite/expr/.

	* TestFstack.java, TestFcore: New.  Translation of old dejagnu
	tests from frysk-core/testsuite/utils/.

2007-02-01  Nurdin Premji  <npremji@redhat.com>

	* fcatch.xml: Updated SEE ALSO section. Cleaned up EXAMPLE, SYNOPSIS and DESCRIPTION
	sections.
	* fcore.xml: Ditto.
	* fhpd.xml: Ditto.
	* fparser.xml: Ditto.
	* fstack.xml: Ditto.
	* fstep.xml: Ditto.
	* ftrace.xml: Ditto.

2007-01-26  Mark Wielaard  <mark@klomp.org>

	* fhpd.java (FhpdCompletor): Mark as static class.

2007-01-23  npremji  <npremji@tow.toronto.redhat.com>

	* fcatch.java (.parsed): Changed catch Exception _ to catch Exception e.
	* ftrace.java (.notifyFile): Ditto.
	(.parsed): Ditto.

2007-01-23  Andrew Cagney  <cagney@redhat.com>

	* fstep.java: Remove TaskException code.

2007-01-11  Stan Cox  <scox@redhat.com>

	* fhpd.java (FhpdCompletor): New.

2007-01-10  Nurdin Premji  <npremji@redhat.com>

	* fcatch.java (run): Use Logger.getLogger instead of EventLogger.get to avoid
	creating new files.
	Reflect move of addConsoleOptions from frysk.util.Util to frysk.EventLogger.
	* fstack.java (addOptions): Ditto.
	* fcore.java (addOptions): Ditto.