@@ -1,3 +1,12 @@
+2007-02-15  Rick Moseley  <rmoseley@redhat.com>
+
+	* DOMCommon.java: New.
+	* DomImage.java: Add addSource method to call parser when
+	adding source element to DOM.
+	* TestParser.java: Call methods in DOMCommon instead of 
+	DOMFactory.
+	* DOMFactory.java: Pull static methods out and put in DOMCommon.
+
 2007-02-05  Andrew Cagney  <cagney@redhat.com>
 
 	* TestParser.java: Replace frysk.junit.Paths with frysk.Config.
