@@ -1,3 +1,8 @@
+2007-02-15  Rick Moseley  <rmoseley@redhat.com>
+
+	* fparser.java: Use methods from DOMCommon instead of
+	DOMFactory.
+
 2007-02-09  Andrew Cagney  <cagney@redhat.com>
 
 	* TestFstack.java: Enable tests.
